--- a/config/db/db.conf
+++ b/config/db/db.conf
@@ -1,7 +1,7 @@
 
 # Database config 
 TYPE=mysql
-HOST=std-mysql
-DB=std_1370_students
-USER=std_1370_students
-PASS=12345678
+HOST=localhost
+DB=test
+USER=root
+PASS=
